test: Enhance scrape lambda test suite with comprehensive scenarios
- Added multiple test cases for recursive link processing
- Implemented tests for document processing (PDF, DOCX)
- Replaced moto with respx for more flexible HTTP mocking
- Added tests for link filtering, max recursion, and images configuration
- Updated requirements.txt with new testing dependencies
- Expanded test coverage for lambda handler with diverse input scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ venv/
 venv-win/
 package/
 .specstory/*
+scrape-service/scrape_service.egg-info
+scrape-service/test/__pycache__
+scrape-service/src/__pycache__
+scrape-service/.coverage
