feat: Implement rate limiting for recursive link processing
- Added rate limit mechanism to control request frequency during link recursion
- Introduced configurable rate limit parameter in Lambda handler
- Implemented time.sleep() to prevent potential IP blocking
- Updated .gitignore to exclude private test directory
- Added global RATE_LIMIT_SECONDS variable with default 0.5-second delay
- Enhanced test suite with DuckDuckGo recursion scenario to validate new feature

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ scrape-service/scrape_service.egg-info
 scrape-service/test/__pycache__
 scrape-service/src/__pycache__
 scrape-service/.coverage
+scrape-service/private_tests/
